2011-06-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- (v0.3.2) Edit helper header to make clear that gx, gy, gz
	correspond to the coordinates of where the NRRD volume was
	actually sampled to obtain IM. Hence, for INTERP='nn' if you plot
	the plane, it will in general look a bit "jagged" instead of flat.

	- Thanks to Pablo Lamata for pointing out that this feature was
	not clear in the help header.

	* Add FindMatlab.cmake:

	- To make a derivative work of file FindMatlab.cmake released with
	CMake v2.8, because the original seems to be a bit outdated and
	doesn't work with my Windows XP and Visual Studio 10
	install. (Note that the original file does work for Ubuntu Natty)

2011-06-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.5.0) Remove CC.dbif. The Maurer distance is quite misleading
	if the vessel's cross section is very elliptical.

	* FiltersToolbox/skeleton_label.m:

	- (v0.10.0) Add merging of neighbouring branches that are a
	continuation of each other. The merging is controlled by new input
	arguments alphamax, p.

2011-06-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.4.2) CC.BifurcationPixelIdx has changed from vector to
	vector of cells.

	* FiltersToolbox/skeleton_label.m:

	- (v0.9.4) Get bifurcation point indices for all types of
	branches, not only leaves.

2011-06-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add subversion property "svn:eol-style native" to all text
	files, so that people working with Windows will get the correct
	end of line characters.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- (v0.3.1) Tidy up code to match Gerardus coding guidelines.

	- (v0.3.0) Patch submitted by Pablo Lamata. Add input argument for
	interpolation type. Before, interpolation was performed by finding
	the nearest voxel to the sampling point (more approrpiate for